--- a/precourse/style.css
+++ b/precourse/style.css
@@ -4,26 +4,29 @@
   box-sizing: border-box;
 }
 
+/* 鼠标hover功能未实现，连接功能未实现 */
+
+#nav-bar {
+  /* margin: 0 auto;
+  padding: 0 10px; */
+  background-color: rgb(51, 51, 51);
+  white-space: nowrap;
+}
+
+ul {
+  list-style-type: none;
+  /* margin: 0;
+  padding: 0; */
+  font-size: 0;
+  text-align: center;
+}
+
 li {
-  list-style: none;
+  display: inline-block;
+  height: 44px;
+  width: 40px;
 }
 
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-/** global classes styling **/
-
-.container {
-  max-width: 100px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-nav > ul {
-  width: 35vw;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+nav li:not(:last-child) {
+  margin-right: 51.6px;
 }
