--- a/precourse/style.css
+++ b/precourse/style.css
@@ -188,7 +188,7 @@ a:active {
 
 .col-2 li:first-child {
   letter-spacing: -0.01px;
-  color: black;
+  color: yellow;
   /* padding-top: 20px; */
 }
 
@@ -242,7 +242,7 @@ a:active {
 }
 
 .legal-links a:not(:last-child) {
-  border-right: 1px solid red;
+  border-right: 1px solid #666;
   margin-right: 15px;
   padding-right: 15px;
 }
