remote respond test

--- a/precourse/style.css
+++ b/precourse/style.css
@@ -188,7 +188,7 @@ a:active {
 
 .col-2 li:first-child {
   letter-spacing: -0.01px;
-  color: yellow;
+  color: black;
   /* padding-top: 20px; */
 }
 
