--- a/web-basic/airbnb/demo.css
+++ b/web-basic/airbnb/demo.css
@@ -250,3 +250,27 @@
   background-position: center center;
   height: 295px;
 }
+
+/* ----------- Footer ----------- */
+
+.footerNav h5,
+.footerNav a {
+  font-size: 14px;
+}
+
+.footerNav h5 {
+  line-height: 18px;
+}
+
+.footerNav .social {
+  font-size: 18px;
+  height: 18px;
+}
+
+.footerBar small {
+  font-size: 14px;
+}
+
+.footerBar .select .angle {
+  transform: rotate(90deg);
+}
